--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-oj-solutions-html-blog",
   "version": "1.0.0",
   "description": "1.读取->载入数据库",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
